# 2d-gaussian-splatting

./: .gitignore  .gitmodules  README.md  WANDB_GUIDE.md  config.yaml  environment.yml  metrics.py  pyproject.toml  render.py  train.py
configs/: README.md  high_quality.yaml  quick_test.yaml
scripts/eval_dtu/: eval.py  evaluate_single_scene.py
utils/: config_utils.py  general_utils.py  mesh_utils.py  render_utils.py  wandb_utils.py
